Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/APawn.h

	DOTNET_EXPORT auto E_PROP_APawn_AllowedYawError_GET(APawn* Ptr) { return Ptr->AllowedYawError; }
	DOTNET_EXPORT void E_PROP_APawn_AllowedYawError_SET(APawn* Ptr, float Value) { Ptr->AllowedYawError = Value; }
	
	DOTNET_EXPORT auto E_PROP_APawn_AutoPossessAI_GET(APawn* Ptr) { return Ptr->AutoPossessAI; }
	DOTNET_EXPORT void E_PROP_APawn_AutoPossessAI_SET(APawn* Ptr, EAutoPossessAI Value) { Ptr->AutoPossessAI = Value; }
	
	DOTNET_EXPORT auto E_PROP_APawn_BaseEyeHeight_GET(APawn* Ptr) { return Ptr->BaseEyeHeight; }
	DOTNET_EXPORT void E_PROP_APawn_BaseEyeHeight_SET(APawn* Ptr, float Value) { Ptr->BaseEyeHeight = Value; }
	
	DOTNET_EXPORT auto E_PROP_APawn_RemoteViewPitch_GET(APawn* Ptr) { return Ptr->RemoteViewPitch; }
	DOTNET_EXPORT void E_PROP_APawn_RemoteViewPitch_SET(APawn* Ptr, uint8 Value) { Ptr->RemoteViewPitch = Value; }
	DOTNET_EXPORT auto E_APawn_AddControllerPitchInput(APawn* Self, float Val)
	{
		auto _p0 = Val;
		Self->AddControllerPitchInput(_p0);
	}
	DOTNET_EXPORT auto E_APawn_OnRep_ReplicateMovement(APawn* Self)
	{
		Self->OnRep_ReplicateMovement();
	}
	DOTNET_EXPORT auto E_APawn_OnReplicationPausedChanged(APawn* Self, bool bIsReplicationPaused)
	{
		auto _p0 = bIsReplicationPaused;
		Self->OnReplicationPausedChanged(_p0);
	}
	DOTNET_EXPORT auto E_APawn_OnSubobjectCreatedFromReplication(APawn* Self, UObject* NewSubobject)
	{
		auto _p0 = NewSubobject;
		Self->OnSubobjectCreatedFromReplication(_p0);
	}
	DOTNET_EXPORT auto E_APawn_OnSubobjectDestroyFromReplication(APawn* Self, UObject* Subobject)
	{
		auto _p0 = Subobject;
		Self->OnSubobjectDestroyFromReplication(_p0);
	}
	DOTNET_EXPORT auto E_APawn_PostActorCreated(APawn* Self)
	{
		Self->PostActorCreated();
	}
	DOTNET_EXPORT auto E_APawn_PostInitProperties(APawn* Self)
	{
		Self->PostInitProperties();
	}
	DOTNET_EXPORT auto E_APawn_PostNetInit(APawn* Self)
	{
		Self->PostNetInit();
	}
	DOTNET_EXPORT auto E_APawn_PostNetReceive(APawn* Self)
	{
		Self->PostNetReceive();
	}
	DOTNET_EXPORT auto E_APawn_PostNetReceivePhysicState(APawn* Self)
	{
		Self->PostNetReceivePhysicState();
	}
	DOTNET_EXPORT auto E_APawn_PostRename(APawn* Self, UObject* OldOuter, char* OldName)
	{
		auto _p0 = OldOuter;
		auto _p1 = ConvertFromManage_FName(OldName);
		Self->PostRename(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APawn_PostUnregisterAllComponents(APawn* Self)
	{
		Self->PostUnregisterAllComponents();
	}
	DOTNET_EXPORT auto E_APawn_PreNetReceive(APawn* Self)
	{
		Self->PreNetReceive();
	}
	DOTNET_EXPORT auto E_APawn_PrestreamTextures(APawn* Self, float Seconds, bool bEnableStreaming, int32 CinematicTextureGroups)
	{
		auto _p0 = Seconds;
		auto _p1 = bEnableStreaming;
		auto _p2 = CinematicTextureGroups;
		Self->PrestreamTextures(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APawn_RegisterActorTickFunctions(APawn* Self, bool bRegister)
	{
		auto _p0 = bRegister;
		((E_PROTECTED_WRAP_APawn*)Self)->RegisterActorTickFunctions_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_APawn_RegisterAllComponents(APawn* Self)
	{
		Self->RegisterAllComponents();
	}
	DOTNET_EXPORT auto E_APawn_RemoveTickPrerequisiteActor(APawn* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->RemoveTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_APawn_RemoveTickPrerequisiteComponent(APawn* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->RemoveTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_APawn_ReregisterAllComponents(APawn* Self)
	{
		Self->ReregisterAllComponents();
	}
	DOTNET_EXPORT auto E_APawn_RerunConstructionScripts(APawn* Self)
	{
		Self->RerunConstructionScripts();
	}
	DOTNET_EXPORT auto E_APawn_SetActorHiddenInGame(APawn* Self, bool bNewHidden)
	{
		auto _p0 = bNewHidden;
		Self->SetActorHiddenInGame(_p0);
	}
	DOTNET_EXPORT auto E_APawn_SetLifeSpan(APawn* Self, float InLifespan)
	{
		auto _p0 = InLifespan;
		Self->SetLifeSpan(_p0);
	}
	DOTNET_EXPORT auto E_APawn_SetOwner(APawn* Self, AActor* NewOwner)
	{
		auto _p0 = NewOwner;
		Self->SetOwner(_p0);
	}
	DOTNET_EXPORT auto E_APawn_SetReplicateMovement(APawn* Self, bool bInReplicateMovement)
	{
		auto _p0 = bInReplicateMovement;
		Self->SetReplicateMovement(_p0);
	}
	DOTNET_EXPORT auto E_APawn_TearOff(APawn* Self)
	{
		Self->TearOff();
	}
	DOTNET_EXPORT auto E_APawn_TeleportTo(APawn* Self, INT_PTR DestLocation, INT_PTR DestRotation, bool bIsATest, bool bNoCheck)
	{
		auto _p0 = *(FVector*)DestLocation;
		auto _p1 = *(FRotator*)DestRotation;
		auto _p2 = bIsATest;
		auto _p3 = bNoCheck;
		return Self->TeleportTo(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_APawn_Tick(APawn* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->Tick(_p0);
	}
	DOTNET_EXPORT auto E_APawn_TickActor(APawn* Self, float DeltaTime, ELevelTick TickType, INT_PTR ThisTickFunction)
	{
		auto _p0 = DeltaTime;
		auto _p1 = TickType;
		auto _p2 = *(FActorTickFunction*)ThisTickFunction;
		Self->TickActor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APawn_TornOff(APawn* Self)
	{
		Self->TornOff();
	}
	DOTNET_EXPORT auto E_APawn_UnregisterAllComponents(APawn* Self, bool bForReregister)
	{
		auto _p0 = bForReregister;
		Self->UnregisterAllComponents(_p0);
	}
	DOTNET_EXPORT auto E_APawn_UseShortConnectTimeout(APawn* Self)
	{
		return Self->UseShortConnectTimeout();
	}
	DOTNET_EXPORT auto E_APawn_AreNativePropertiesIdenticalTo(APawn* Self, UObject* Other)
	{
		auto _p0 = Other;
		return Self->AreNativePropertiesIdenticalTo(_p0);
	}
	DOTNET_EXPORT auto E_APawn_FinishDestroy(APawn* Self)
	{
		Self->FinishDestroy();
	}
	DOTNET_EXPORT auto E_APawn_GetDesc(APawn* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDesc());
	}
	DOTNET_EXPORT auto E_APawn_GetDetailedInfoInternal(APawn* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDetailedInfoInternal());
	}
	DOTNET_EXPORT auto E_APawn_IsAsset(APawn* Self)
	{
		return Self->IsAsset();
	}
	DOTNET_EXPORT auto E_APawn_IsEditorOnly(APawn* Self)
	{
		return Self->IsEditorOnly();
	}
	DOTNET_EXPORT auto E_APawn_IsFullNameStableForNetworking(APawn* Self)
	{
		return Self->IsFullNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_APawn_IsLocalizedResource(APawn* Self)
	{
		return Self->IsLocalizedResource();
	}
	DOTNET_EXPORT auto E_APawn_IsPostLoadThreadSafe(APawn* Self)
	{
		return Self->IsPostLoadThreadSafe();
	}
	DOTNET_EXPORT auto E_APawn_IsSafeForRootSet(APawn* Self)
	{
		return Self->IsSafeForRootSet();
	}
	DOTNET_EXPORT auto E_APawn_MarkAsEditorOnlySubobject(APawn* Self)
	{
		Self->MarkAsEditorOnlySubobject();
	}
	DOTNET_EXPORT auto E_APawn_NeedsLoadForClient(APawn* Self)
	{
		return Self->NeedsLoadForClient();
	}
	DOTNET_EXPORT auto E_APawn_NeedsLoadForEditorGame(APawn* Self)
	{
		return Self->NeedsLoadForEditorGame();
	}
	DOTNET_EXPORT auto E_APawn_NeedsLoadForServer(APawn* Self)
	{
		return Self->NeedsLoadForServer();
	}
	DOTNET_EXPORT auto E_APawn_NotifyObjectReferenceEliminated(APawn* Self)
	{
		Self->NotifyObjectReferenceEliminated();
	}
	DOTNET_EXPORT auto E_APawn_PostCDOContruct(APawn* Self)
	{
		Self->PostCDOContruct();
	}
	DOTNET_EXPORT auto E_APawn_PostEditImport(APawn* Self)
	{
		Self->PostEditImport();
	}
	DOTNET_EXPORT auto E_APawn_PostRepNotifies(APawn* Self)
	{
		Self->PostRepNotifies();
	}
	DOTNET_EXPORT auto E_APawn_PostSaveRoot(APawn* Self, bool bCleanupIsRequired)
	{
		auto _p0 = bCleanupIsRequired;
		Self->PostSaveRoot(_p0);
	}
	DOTNET_EXPORT auto E_APawn_PreDestroyFromReplication(APawn* Self)
	{
		Self->PreDestroyFromReplication();
	}
	DOTNET_EXPORT auto E_APawn_ShutdownAfterError(APawn* Self)
	{
		Self->ShutdownAfterError();
	}
	DOTNET_EXPORT auto E_APawn_AddToCluster(APawn* Self, UObjectBaseUtility* ClusterRootOrObjectFromCluster, bool bAddAsMutableObject)
	{
		auto _p0 = ClusterRootOrObjectFromCluster;
		auto _p1 = bAddAsMutableObject;
		Self->AddToCluster(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APawn_CanBeClusterRoot(APawn* Self)
	{
		return Self->CanBeClusterRoot();
	}
	DOTNET_EXPORT auto E_APawn_CreateCluster(APawn* Self)
	{
		Self->CreateCluster();
	}
	DOTNET_EXPORT auto E_APawn_OnClusterMarkedAsPendingKill(APawn* Self)
	{
		Self->OnClusterMarkedAsPendingKill();
	}